home - fix whitespace below footer

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -128,12 +128,11 @@ header {
             // display: none;
             position: absolute;
             width: 100%;
-            height: calc(
-                100vh - 57px
-            ); // fixme: why 58px not covers the bottom of page??
+            height: 100vh;
             background: rgb(255, 255, 255);
-            top: 58px;
+            top: 0;
             left: 0;
+            z-index: -1;
             // right: -100%;
             // transition: 0.5s;
             // animation: slide-in 0.5s forwards;
@@ -141,7 +140,7 @@ header {
             ul {
                 display: block;
                 text-align: left;
-                padding-top: 145px;
+                padding-top: 203px;
                 padding-left: 60px;
 
                 li {
