--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,12 +1,12 @@
 .container {
     margin: 0 auto;
     max-width: 750px;
-    padding: 1rem;
+    padding: 1rem 1rem 5px 1rem;
     padding-top: 110px;
 
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
     min-height: -webkit-fill-available;
     // background: url(../assets/industrial1.jpg);
     // background-attachment: fixed;
